PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add *pel-treesit-check-setup* command, bound to ~<f11> C-t ?~.  This command
  checks the validity of Emacs Tree-Sitter grammar language directory settings
  and print any detected issue as a warning.
- Add support for the atl-long-lines package.
  Add *atl-long-lines-mode* command, bound to ~<f11> l a~, provided by the
  atl-long-lines package, activated when the *pel-use-atl-long-lines* user
  option is on (*t*).
- Add *pel-hier-modes* command, bound to ~<f11> ? e h~.  This prints the hierarchy of major modes
  currently loaded inside a hierarchy-tablulated buffer.  The PEL code is a slight modification of
  the hierarchy-examples-major-modes.el written by Damien Cassou where I
  renamed the symbols to integrate his excellent example into PEL.
- Add support for several writing tools and a Writing Tools PDF. The tools are:
  - artbollocks-mode, activated by *pel-use-artbollocks-mode*,
  - harper-ls, activated by *pel-use-harper-ls*,
  - my-whisper, activated by *pel-use-my-whisper*,
  - wc-mode, activated by *pel-use-wc-mode*,
  - writegood-mode, activated by *pel-use-writegood-mode*,
  - writeroom-mode, activated by *pel-use-writeroom-mode*,
  - Update link to go-translate, activated by *pel-use-go-translate*; it was renamed gt by its author.
- Add support to Mode Line Scroll, mlscroll, when *pel-use-mlscroll* user-option is set to either t or to use-from-start.
- Add preliminary support for the Dart programming language.
  PEL activates it with the *dart-mode* the *pel-use-dart* user-option is set
  to *t*, and with *dart-ts-mode* when it is set to *with-tree-sitter*.
  User can toggle from the classic or tree-sitter based mode with  ~<f11>
  C-t C-t~.
  - When setting *pel-indent-with-tabs-mode-for-dart* to a number, PEL automatically
    activates the *pel-indent-with-tabs-mode* open for Dart buffers with the selected